<resources>
    <string name="app_name">mpi_project1</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_conf_password">Confirm password</string>
    <string name="prompt_name">Enter your Name</string>
    <string name="prompt_first_name">Enter your First Name</string>
    <string name="prompt_cin">Enter your CIN</string>
    <string name="navigation_drawer_open">open drawer </string>
    <string name="navigation_drawer_close">close drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>